# hackathon_zero

./: .gitattributes  .gitignore  DEPLOYMENT_CHECKLIST.md  GOLDEN_TIER_SUMMARY.md  GOLD_TIER_100_COMPLETE.md  GOLD_TIER_COMPLETE_SUMMARY.md  GOLD_TIER_FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  LINKEDIN_PLAYWRIGHT_IMPLEMENTATION.md  LINKEDIN_PLAYWRIGHT_SUMMARY.md  LINKEDIN_SETUP_GUIDE.md  MCP_CAPABILITIES.md  PLATINUM_FINAL_REPORT.md  PLATINUM_PHASE2_COMPLETE.md  PLATINUM_RUNNING_STATUS.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  README.md  linkedin_automation.py  main.py  main_golden.py  main_platinum.py  package-lock.json  package.json  project_run_guid.md  pyproject.toml  requirements.txt
AI_Employee_Vault/: .gitignore  A2A_PROTOCOL.md  Company_Handbook.md  Dashboard.md  PLATINUM_PHASE2_COMPLETE.md  PLATINUM_README.md  Platinum_Status.md  README.md  SKILL.md  approval_system.py  base_watcher.py  cloud_a2a_config.json  file_system_watcher.py  gmail_watcher.py  golden_tier_config.json  local_a2a_config.json  mcp_server.py  requirements.txt  run_watchers.py  scheduler.py  setup_gmail_credentials.md  setup_linkedin_api.md  whatsapp_watcher.py
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Browser_Actions/: browser_action_linkedin_login_20260309_004136.json  browser_action_linkedin_login_20260309_004149.json
AI_Employee_Vault/Cross_Domain/: merged_contacts.json  sync_log_20260303_004023.json  sync_log_20260303_004158.json  sync_log_20260309_010743.json
AI_Employee_Vault/Inbox/: test_file_20260225_005854.txt  (+1 more)
(+101 files in other folders)
